# bennis-server

./: .env  Cargo.toml
migrations/2023-06-01-003812_orders/: down.sql  up.sql
migrations/2023-06-01-005039_menu_items/: down.sql  up.sql
migrations/2023-06-01-005309_additions/: down.sql  up.sql
src/: main.rs  methods.rs  models.rs  schema.rs
