[package]
name = "bennis-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
futures = "0.3.28"
mongodb = {version="2.5.0"}
serde = {version="1.0.163", features = ["derive"] }
tokio = {version="1.28.1",features=["macros", "rt-multi-thread"]}

