[package]
name = "bennis-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
diesel = { version = "2.1.0", features = ["postgres"] }
diesel-enum = "0.1.0"
dotenvy = "0.15"
serde = {version="1.0.163", features = ["derive"] }
tokio = {version="1.28.1",features=["macros", "rt-multi-thread"]}

